Implement storing entries